# HeapWatcher

./: .clang-format  CMakeLists.txt  LICENSE  README.md  checks.json
include/: HeapWatcher.hpp  MultithreadedTestFixture.hpp
src/: AllocationRecord.cpp  BacktraceDemangler.cpp  BacktraceDemangler.hpp  CMakeLists.txt  HeapWatcher.cpp  KnownLeaks.cpp  WorkerRequest.hpp
unit tests/: BasicTests.cpp  CMakeLists.txt  TestFixtureTests.cpp  TestWorkloads.cpp  TestWorkloads.hpp
unit_tests/: BasicTests.cpp  CMakeLists.txt  TestFixtureTests.cpp  TestWorkloads.cpp  TestWorkloads.hpp
